# ninjarmm_screening

./: .gitignore  README.md
step1/: CMakeLists.txt
step1/src/step1/: CMakeLists.txt  job.cpp  job.h  job_main.cpp  preddicators_main.cpp  predicators.cpp  tests.cpp
step2/: CodeReview.cpp
step3/: CMakeLists.txt  CodeChallenge.cpp
